bp-sosmed-yaml/php-pesbuk.yaml.yaml
apiVersion: v1
kind: Pod
metadata:
  name: php-pesbuk
  namespace: pesbuk
  labels:
    app: php-pesbuk
spec:
  volumes:
    - name: config-pesbuk
      configMap:
        name: configmap-pesbuk
  containers:
  - name: php-sosmed
    image: sekolahdevopscilsy/php-sosmed
    ports:
    - containerPort: 80
    volumeMounts:
    - name: config-pesbuk
      mountPath: "/var/www/html/config.php"
      subPath: "config.php"
  - name: mysql-sosmed
    image: sekolahdevopscilsy/mysql-sosmed
    ports:
    - containerPort: 3306
