bp-sosmed-yaml/pesbuk-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  pesbuk
  labels:
    app: pesbuk
spec:
  selector:
    matchLabels:
      app: pesbuk
  replicas: 1
  template:
    metadata:
      labels:
        app: pesbuk
    spec:
      volumes:
      - name: config-pesbuk #buat configmap deployment
        configMap:
          name: configmap-pesbuk #nama deployment configmap
      containers:
      - name: pesbuk
        image: muhammadrafli24/sosmed:${BUILD_NUMBER}
        ports:
          - containerPort: 8081
        volumeMounts:
          - name: config-pesbuk
            mountPath: "/var/www/html/config.php"
            subPath: "config.php"
---
apiVersion: v1
kind: Service
metadata:
  name: pesbuk-service
spec:
  selector:
    app: pesbuk
  ports:
  - name: pesbuk-service
    protocol: TCP
    port: 80
    targetPort: 8081
