bp-sosmed-yaml/pesbuk-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pesbuk-service
spec:
  selector:
    app: pesbuk
  type: LoadBalancer
  ports:
  - name: pesbuk-service
    protocol: TCP
    port: 80
    targetPort: 80
